--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -79,8 +79,11 @@
       &:hover{
         background-color: $color-theme;
         color:#fff;
+        transition: background-color 2s ease-out;
+        transition: all 0.5s ease-out;
         img{
-          filter: grayscale(100%) brightness(500%);
+          filter: grayscale(100%) brightness(250%);
+          transition: filter 0.5s ease-out;
         }
       }
     }
