add border radius

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -57,6 +57,7 @@ figcaption {
   background: #ffffff;
   padding: 1rem 2rem;
   margin-bottom: 1rem;
+  border-radius: 2px;
 }
 
 .site-main:after {
