--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -76,6 +76,7 @@
     a{
       padding: 10px;
       text-decoration: none;
+      border-radius: 2px;
       &:hover{
         background-color: $color-theme;
         color:#fff;
