--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -82,6 +82,7 @@
         color:#fff;
         transition: background-color 2s ease-out;
         transition: all 0.5s ease-out;
+        box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, .2);
         img{
           filter: grayscale(100%) brightness(250%);
           transition: filter 0.5s ease-out;
