--- a/scss/style.css
+++ b/scss/style.css
@@ -6645,7 +6645,9 @@ footer#footer {
         transition: background-color 2s ease-out;
         -webkit-transition: all 0.5s ease-out;
         -o-transition: all 0.5s ease-out;
-        transition: all 0.5s ease-out; }
+        transition: all 0.5s ease-out;
+        -webkit-box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2);
+        box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2); }
         .liens_utiles-item a:hover img {
           -webkit-filter: grayscale(100%) brightness(250%);
           filter: grayscale(100%) brightness(250%);
