--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -57,6 +57,11 @@ h6 {
   line-height: 1.5em;
   letter-spacing: 1px;
 }
+#footer .widget h2{
+		color:#fff;
+    font-weight: 700;
+    font-size: 1rem;
+}
 .widget{
   font-size: 0.9rem !important;
   ul li{
