--- a/scss/style.css
+++ b/scss/style.css
@@ -6246,7 +6246,8 @@ h6 {
 #footer .widget h2 {
   color: #fff;
   font-weight: 700;
-  font-size: 1rem; }
+  font-size: 0.9rem;
+  text-transform: none; }
 
 .widget {
   font-size: 0.9rem !important; }
