change color to footer lines

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -60,8 +60,10 @@ h6 {
 #footer .widget h2{
 		color:#fff;
     font-weight: 700;
-    font-size: 0.9rem;
     text-transform: none;
+}
+#footer a{
+		color:#fff;
 }
 .widget{
   font-size: 0.9rem !important;
