change text size for hours

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -11,7 +11,8 @@ html,body {
 #primary, #secondary{
   font-size: 0.9rem;
 }
-p {
+p,
+.iva_bh_shortcode {
   font-size: 0.9rem;
   line-height: 1.5rem;
   margin-top: 1em;
