--- a/scss/style.css
+++ b/scss/style.css
@@ -6676,3 +6676,6 @@ footer#footer {
       margin: 0 auto;
       height: 64px;
       padding: 10px; }
+
+.iva_bh_shortcode {
+  margin-right: 200px; }
