--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,10 +1,10 @@
 footer#footer{
 	clear:both;
 	background-color:$footer-color;
+	padding: 3rem 0;
 	.widget{
 		background-color:transparent;
 		color: #fff;
-		margin:3rem 0;
 		padding: 0;
 		p,
 		dl{
