--- a/scss/style.css
+++ b/scss/style.css
@@ -5867,7 +5867,7 @@ table, th, td {
 
 .header {
   background-color: #ffffff;
-  padding: 20px 0; }
+  padding: 20px 0 5px; }
 
 .site-inner {
   max-width: 1220px; }
