change padding and margin for gray container

--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -10,7 +10,7 @@
     margin: 0 0 50px;
   }
   &-gray{
-    margin: 0 0 40px;
+    padding: 40px;
     background-color: $gray-background;
   }
   &__admin{
