change bachground color to widgets

--- a/scss/layout/_widgets.scss
+++ b/scss/layout/_widgets.scss
@@ -1,5 +1,5 @@
 .widget{
-  background-color: #fff;
+  background-color: $gray-background;
   border-top: 0;
   list-style-type: none;
   padding: 1rem 1.5rem;
