--- a/scss/style.css
+++ b/scss/style.css
@@ -6533,7 +6533,7 @@ footer#footer {
   float: right !important; }
 
 .widget {
-  background-color: #fff;
+  background-color: #F7F7F7;
   border-top: 0;
   list-style-type: none;
   padding: 1rem 1.5rem;
