--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -192,3 +192,18 @@ table tr td{
 	width: 100%;
 	height: 2.2rem;
 }
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="week"],
+input[type="month"],
+input[type="text"],
+input[type="email"],
+input[type="url"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="number"],
+textarea {
+  background: #fff;
+}
