--- a/scss/style.css
+++ b/scss/style.css
@@ -6021,6 +6021,21 @@ table tr td {
   width: 100%;
   height: 2.2rem; }
 
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="week"],
+input[type="month"],
+input[type="text"],
+input[type="email"],
+input[type="url"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="number"],
+textarea {
+  background: #fff; }
+
 #documents {
   display: -webkit-box;
   display: -ms-flexbox;
