change input styles

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -206,4 +206,7 @@ input[type="tel"],
 input[type="number"],
 textarea {
   background: #fff;
+  padding: 1em;
+  border: 1px solid #eee;
+  margin-top: 5px;
 }
