--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -206,7 +206,7 @@ input[type="tel"],
 input[type="number"],
 textarea {
   background: #fff;
-  padding: 1em;
+  padding: 1em !important;
   border: 1px solid #eee;
   margin-top: 5px;
 }
