--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -65,35 +65,36 @@
 		padding:5px 0;
 	}
 }
-
-.liens_utiles{
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-  &-item{
-    display: grid;
-    text-align: center;
-    width: calc(100% / 6);
-    a{
-      padding: 10px;
-      text-decoration: none;
-      border-radius: 2px;
-      &:hover{
-        background-color: $color-theme;
-        color:#fff;
-        transition: background-color 2s ease-out;
-        transition: all 0.5s ease-out;
-        box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, .2);
-        img{
-          filter: grayscale(100%) brightness(250%);
-          transition: filter 0.5s ease-out;
+.homepage-content{
+  .liens_utiles{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    &-item{
+      display: grid;
+      text-align: center;
+      width: calc(100% / 6);
+      a{
+        padding: 10px;
+        text-decoration: none;
+        border-radius: 2px;
+        &:hover{
+          background-color: $color-theme;
+          color:#fff;
+          transition: background-color 2s ease-out;
+          transition: all 0.5s ease-out;
+          box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, .2);
+          img{
+            filter: grayscale(100%) brightness(250%);
+            transition: filter 0.5s ease-out;
+          }
         }
       }
-    }
-    img{
-      margin: 0 auto;
-      height: 64px;
-      padding: 10px;
+      img{
+        margin: 0 auto;
+        height: 64px;
+        padding: 10px;
+      }
     }
   }
 }
