--- a/scss/layout/_widgets.scss
+++ b/scss/layout/_widgets.scss
@@ -51,4 +51,12 @@
 		  float:left;
 	  }
   }
+  .liens_utiles-item a{
+    display: flex;
+    font-size: 16px;
+    img{
+      max-width: 40px;
+      margin-right: 20px;
+    }
+  }
 }
