lien utiles widget design

--- a/scss/layout/_widgets.scss
+++ b/scss/layout/_widgets.scss
@@ -51,8 +51,10 @@
 		  float:left;
 	  }
   }
-  .liens_utiles-item a{
+  .liens_utiles-item figure{
     display: flex;
+    align-items: center;
+    margin: 10px 0;
     font-size: 16px;
     img{
       max-width: 40px;
