--- a/scss/style.css
+++ b/scss/style.css
@@ -6596,12 +6596,16 @@ footer#footer {
       margin-top: -5px;
       padding: 0 10px 0 0;
       float: left; }
-  .widget .liens_utiles-item a {
+  .widget .liens_utiles-item figure {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 10px 0;
     font-size: 16px; }
-    .widget .liens_utiles-item a img {
+    .widget .liens_utiles-item figure img {
       max-width: 40px;
       margin-right: 20px; }
 
