change pilier and actus pos

--- a/scss/layout/_homepage.scss
+++ b/scss/layout/_homepage.scss
@@ -17,7 +17,8 @@
     margin-bottom: 50px
   }
   &__actus-pilier{
-    margin-bottom: 20px;
+    top: -20px;
+    position: relative;
     display: flex;
     .site-main{
       height: 100%;
