--- a/scss/layout/_widgets.scss
+++ b/scss/layout/_widgets.scss
@@ -55,7 +55,7 @@
     display: flex;
     align-items: center;
     margin: 10px 0;
-    font-size: 16px;
+    font-size: 0.9rem;
     img{
       max-width: 40px;
       margin-right: 20px;
