--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -88,8 +88,10 @@ a:hover{
 }
 h1,
 h1.entry-title {
-  font-size: 1.5rem;
-  margin: 2rem;
+    font-size: 1.8rem;
+    margin: 2rem;
+    text-transform: uppercase;
+    color: $color-theme;
 }
 h2{
     font-size: 1.2rem;
