hide bullet next to open day

--- a/scss/layout/_widgets.scss
+++ b/scss/layout/_widgets.scss
@@ -74,3 +74,6 @@ button, html input[type="button"], input[type="reset"], input[type="submit"]{
   width: 100%;
   }
 }
+.iva_oc_open{
+  display: none;
+}
