--- a/scss/layout/_widgets.scss
+++ b/scss/layout/_widgets.scss
@@ -74,6 +74,9 @@ button, html input[type="button"], input[type="reset"], input[type="submit"]{
   width: 100%;
   }
 }
+.iva_bh_shortcode .iva_bhp_hours_row, .ivabh-businesshours .iva_bhp_hours_row{
+  margin: 0;
+}
 .iva_oc_open{
-  display: none;
+  display: none !important;
 }
