--- a/scss/layout/_widgets.scss
+++ b/scss/layout/_widgets.scss
@@ -75,7 +75,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"]{
   }
 }
 .iva_bh_shortcode .iva_bhp_hours_row, .ivabh-businesshours .iva_bhp_hours_row{
-  margin: 0;
+  padding: 3px;
 }
 .iva_oc_open{
   display: none !important;
