change archive design

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -93,6 +93,7 @@ h1.entry-title {
     text-transform: uppercase;
     color: $color-theme;
 }
+.category-actualites h3,
 h2{
     font-size: 1.2rem;
     text-transform: uppercase;
