change h3 size for actualite archives

--- a/scss/style.css
+++ b/scss/style.css
@@ -6303,7 +6303,7 @@ h1.entry-title {
   text-transform: uppercase;
   color: #0087CC; }
 
-.category-actualites h3,
+#actualite h3,
 h2 {
   font-size: 1.2rem;
   text-transform: uppercase; }
