add margin below each article in archive page

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -218,3 +218,6 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   padding: 1rem 2rem !important;
   font-weight: 300;
 }
+#actualite .entry hr{
+  margin-bottom: 100px;
+}
