--- a/scss/layout/_widgets.scss
+++ b/scss/layout/_widgets.scss
@@ -80,3 +80,6 @@ button, html input[type="button"], input[type="reset"], input[type="submit"]{
 .iva_oc_open{
   display: none !important;
 }
+footer#footer .ivabh-current-day{
+  color:#fff !important;
+}
