--- a/scss/style.css
+++ b/scss/style.css
@@ -6636,7 +6636,7 @@ footer#footer {
   width: 100%; }
 
 .iva_bh_shortcode .iva_bhp_hours_row, .ivabh-businesshours .iva_bhp_hours_row {
-  padding: 3px !important; }
+  padding: 3px 0 !important; }
 
 .iva_oc_open {
   display: none !important; }
