change titles font

--- a/scss/style.css
+++ b/scss/style.css
@@ -6270,8 +6270,8 @@ h6 {
   margin-top: 1rem;
   margin-bottom: 0;
   font-size: 1.5rem;
-  font-family: "Raleway", "Helvetica", "Arial", sans-serif;
-  font-weight: 300;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: 500;
   line-height: 1.5em;
   letter-spacing: 1px; }
 
